--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "type": "git",
     "url": "git+https://github.com/yogiis98/mongodb-winston-transport.git"
   },
-  "version": "1.0.1",
+  "version": "1.0.2",
   "public": true,
   "description": "Mongodb transport for mongodb",
-  "main": "dist/main.js",
+  "main": "./dist/main.min.js",
   "scripts": {
     "build": "webpack --mode production",
     "lint": "eslint src",
